custom.scss
/*-- scss:defaults --*/

// fonts
$font-size-root: null !default;
$font-size-base: 1rem !default;
$font-family-sans-serif: system-ui, -apple-system, "Helvetica", "Red Hat Display", sans-serif !default;
$font-family-monospace: "Courier New", "Consolas", monospace !default;
$headings-font-weight: 500 !default;

// colors
// custom variables
$syndemics-blue: #003771;
$syndemics-pink: #f0325f;
$syndemics-cyan: #3d9be9;
$background-light: #cccccc;
$background-dark: #444444;

// default colors
$primary: $syndemics-blue !default;
$secondary: $syndemics-cyan !default;
$light: $background-light !default;
$dark: $background-dark !default;
$link-color: $syndemics-pink !default;

// options
$enable-rounded: true !default;

/*-- scss:rules --*/

:root {
    --bs-heading-color-light: #003771;
    --bs-heading-color-dark: #3d9be9;
}

body.quarto-light {
    --bs-heading-color: var(--bs-heading-color-light);

    h1, .h1, h2, .h2 {
        color: var(--bs-heading-color-light);
    }
}

body.quarto-dark {
    --bs-heading-color: var(--bs-heading-color-dark);

    h1, .h1, h2, .h2 {
        color: var(--bs-heading-color-dark);
    }
}

h1.title, .title.h1 {
    font-size: calc(1.5rem + 0.9vw);
}

// color toggle icon
.quarto-color-scheme-toggle {
    position: fixed;

    .bi::before, .alternate .bi::before {
        transition: background-image 0.5s;
    }
}

#TOC {
    font-weight: 600;

    #toc-title {
        font-weight: inherit;
    }

    .header-section-number {
        color: var(--bs-body-color) !important;
        &:after {
            content: " ―";
        }
    }

    .nav-link {
        transition: unset;
    }

    .nav-link:not(:hover) {
        color: inherit !important;
        border-left: solid 1px var(--bs-body-color);
    }

    .nav-link:hover {
        color: var(--quarto-scss-export-syndemics-pink) !important;
        border-left: solid 1px var(--quarto-scss-export-syndemics-pink);
    }
}

.quarto-alternate-formats h2 {
    font-weight: 600 !important;
}

// table style
.table {
    // heading
    & tr:first-of-type {
        background-color: var(--bs-heading-color-dark);
        font-weight: 600;
        border-bottom: 2px solid;
        border-color: inherit;

        & td {
            color: black;
        }
    }

    // table rules
    & > tbody {
        border: 2px solid;
    }

    & col:not(:last-of-type) {
        border-right: 2px solid;
    }

    & > caption {
        font-weight: 600;
        color: var(--bs-heading-color);
    }
}

figcaption {
    font-weight: 600;
    color: var(--bs-heading-color);
    text-align: center;
}

// source code style
pre code {
    font-weight: 600;
}

pre:not(.sourceCode) {
    border: 1px #ccc solid;
    border-radius: 5px;
    overflow: visible;

    &:before {
        position: relative;
        top: -0.8em;
        left: 0.5em;
        background: var(--bs-body-bg);
        font-family: sans-serif;
        font-weight: 600;
        content: " Output ";
    }

    & code {
        margin-top: -1.2em;
        margin-left: 0.5em;
    }
}

